Add missing JVM arguments for JAVA 21