@@ -35,6 +35,7 @@ cd "$OLV_HOME"
 [ -n "$TMPDIR" ] || TMPDIR=/tmp
 
 MEMORY=-Xmx1024m
+ADD_OPENS="--add-opens java.base/java.util=ALL-UNNAMED --add-opens java.desktop/com.sun.java.swing.plaf.windows=ALL-UNNAMED"
 #SFTP_KEY=-Dvfs.Identities=
 
 if [ -n "$JAVA_HOME" ]
@@ -47,8 +48,8 @@ fi
 # Exec is simpler as it eliminates the intervening, useless shell.
 # (Makes for easier process troubleshooting).
 [  "-batch" = "$1" ] &&
-exec $JAVA $MEMORY $SFTP_KEY -jar "$OLV_HOME/olv-exec.jar" $@
+exec $JAVA $MEMORY $ADD_OPENS $SFTP_KEY -jar "$OLV_HOME/olv-exec.jar" $@
 # we need to be sure we are writing to a directory where we have write access, /tmp is one of them but app directory is clearly not
 # If we want more than one user on a shared system to be able to run OLV, then make log file user-specific (at least)
-exec $JAVA $MEMORY $SFTP_KEY  -DsingleInstance.startPort= -jar "$OLV_HOME/olv-exec.jar" $@ > "${TMPDIR}/olv-${LOGNAME}.log" 2>&1 &
+exec $JAVA $MEMORY $ADD_OPENS $SFTP_KEY  -DsingleInstance.startPort= -jar "$OLV_HOME/olv-exec.jar" $@ > "${TMPDIR}/olv-${LOGNAME}.log" 2>&1 &
 
